--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -19,23 +19,29 @@
     <div class="container mt-5">
         <div class="row justify-content-center">
             <div class="col-md-4">
-                <form asp-controller="Login" asp-action="Index" method="post">
-                    <div class="mb-3">
-                        <label for="username" class="form-label">Username</label>
-                        <input type="text" class="form-control" id="username" name="Username" aria-describedby="usernameHelp">
-                        <div id="usernamelHelp" class="form-text">ex. username</div>
+                <div class="card" style="border-radius: 10px;">
+                    <div class="card-body p-md-5">
+                        <form asp-controller="Login" asp-action="Index" method="post">
+                            <div class="mb-3">
+                                <label for="username" class="form-label">Username</label>
+                                <input type="text" class="form-control" id="username" name="Username" aria-describedby="usernameHelp">
+                                <div id="usernamelHelp" class="form-text">ex. username</div>
+                            </div>
+                            <div class="mb-3">
+                                <label for="password" class="form-label">Password</label>
+                                <input type="password" class="form-control" id="password" name="Password" aria-describedby="passwordHelp">
+                                <div id="passwordHelp" class="form-text">Your password must be 8-20 characters long.</div>
+                            </div>
+                            <div class="mb-3 form-check">
+                                <input type="checkbox" class="form-check-input" id="rememberCheck">
+                                <label class="form-check-label" for="rememberCheck">Remember me</label>
+                            </div>
+                            <div class="d-flex justify-content-center">
+                                <button type="submit" class="btn btn-primary signInButton" style="border-radius: 10px;">Login</button>
+                            </div>
+                        </form>
                     </div>
-                    <div class="mb-3">
-                        <label for="password" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="password" name="Password" aria-describedby="passwordHelp">
-                        <div id="passwordHelp" class="form-text">Your password must be 8-20 characters long.</div>
-                    </div>
-                    <div class="mb-3 form-check">
-                        <input type="checkbox" class="form-check-input" id="rememberCheck">
-                        <label class="form-check-label" for="rememberCheck">Remember me</label>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Login</button>
-                </form>
+                </div>
             </div>
         </div>
     </div>
