--- a/Views/Register/Index.cshtml
+++ b/Views/Register/Index.cshtml
@@ -11,27 +11,31 @@
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-4">
-            <form asp-controller="Register" asp-action="Index" method="post">
-                <div class="mb-3">
-                    <label asp-for="Username" class="label-control"></label>
-                    <input asp-for="Username" class="form-control" aria-describedby="usernameHelp" />
-                    <div id="usernameHelp" class="form-text">Your username must be 4-20 characters long</div>
-                    <span asp-validation-for="Username" class="text-danger"></span>
+            <div class="card" style="border-radius: 10px;">
+                <div class="card-body p-md-5">
+                    <form asp-controller="Register" asp-action="Index" method="post">
+                        <div class="mb-3">
+                            <label asp-for="Username" class="label-control"></label>
+                            <input asp-for="Username" class="form-control" aria-describedby="usernameHelp" />
+                            <div id="usernameHelp" class="form-text">Your username must be 4-20 characters long</div>
+                            <span asp-validation-for="Username" class="text-danger"></span>
+                        </div>
+                        <div class="mb-3">
+                            <label asp-for="Email" class="label-control"></label>
+                            <input asp-for="Email" class="form-control" aria-describedby="usernameHelp" />
+                            <div id="emailHelp" class="form-text">ex. email@email.com</div>
+                            <span asp-validation-for="Email" class="text-danger"></span>
+                        </div>
+                        <div class="mb-3">
+                            <label asp-for="Password" class="label-control"></label>
+                            <input asp-for="Password" class="form-control" aria-describedby="passwordHelp" />
+                            <div id="passwordHelp" class="form-text">Your password must be 8-20 characters long.</div>
+                            <span asp-validation-for="Password" class="text-danger"></span>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Register</button>
+                    </form>
                 </div>
-                <div class="mb-3">
-                    <label asp-for="Email" class="label-control"></label>
-                    <input asp-for="Email" class="form-control" aria-describedby="usernameHelp" />
-                    <div id="emailHelp" class="form-text">ex. email@email.com</div>
-                    <span asp-validation-for="Email" class="text-danger"></span>
-                </div>
-                <div class="mb-3">
-                    <label asp-for="Password" class="label-control"></label>
-                    <input asp-for="Password" class="form-control" aria-describedby="passwordHelp" />
-                    <div id="passwordHelp" class="form-text">Your password must be 8-20 characters long.</div>
-                    <span asp-validation-for="Password" class="text-danger"></span>
-                </div>
-                <button type="submit" class="btn btn-primary">Register</button>
-            </form>
+            </div>
         </div>
     </div>
 </div>
