--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,10 +26,10 @@
                     <!-- Move the login and register buttons to the right -->
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Index">Login</a>
+                            <a class="nav-link" asp-area="" asp-controller="Login" asp-action="Index" style="color: white">Login</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Register" asp-action="Index">Register</a>
+                            <a class="nav-link" asp-area="" asp-controller="Register" asp-action="Index" style="color: white">Register</a>
                         </li>
                     </ul>
                 </div>
