--- a/Views/Register/Index.cshtml
+++ b/Views/Register/Index.cshtml
@@ -32,7 +32,9 @@
                             <div id="passwordHelp" class="form-text">Your password must be 8-20 characters long.</div>
                             <span asp-validation-for="Password" class="text-danger"></span>
                         </div>
-                        <button type="submit" class="btn btn-primary">Register</button>
+                        <div class="d-flex justify-content-center">
+                            <button type="submit" class="btn btn-primary signInButton" style="border-radius: 10px;">Register</button>
+                        </div>
                     </form>
                 </div>
             </div>
