--- a/Views/Admin/NewSurvey.cshtml
+++ b/Views/Admin/NewSurvey.cshtml
@@ -14,6 +14,10 @@
                             <label for="title" class="form-label">Title</label>
                             <input type="text" class="form-control" id="title" name="Title">
                         </div>
+                        <div class="mb-3">
+                            <label for="description" class="form-label">Description</label>
+                            <input type="text" class="form-control" id="description" name="Description">
+                        </div>
                         <div id="questions-container">
                             <!-- dynamic questions will be added here . . . -->
                         </div>
