--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -6,3 +6,23 @@
     <h1 class="display-4">Welcome Mr. Admin</h1>
     <p>Placeholder for something?</p>
 </div>
+
+
+<div class="container mt-5">
+    <div class="col-md-4">
+        <div class="card mb-3">
+            <div class="row">
+                <div class="col-md-8">
+                    <div class="card-body p-md-5">
+                        <h3 class="card-title">Surveys</h3>
+                        <p class="card-text">Active surveys: </p>
+                        <p class="card-text">Inactive surveys: </p>
+                    </div>
+                </div>
+                <div class="col-md-4 d-flex justify-content-center">
+                    <a href="@Url.Action("AnsweredSurveys", "Admin")" class="btn btn-primary signInButton">Survey(vector later on)</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
