--- a/Views/Admin/AnsweredSurveys.cshtml
+++ b/Views/Admin/AnsweredSurveys.cshtml
@@ -1,20 +1,38 @@
-﻿@model List<QuestionnaireApp.Models.AnsweredSurvey>
+﻿@model List<(QuestionnaireApp.Models.AnsweredSurvey, QuestionnaireApp.Models.Survey)>
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 
 
-@foreach (var answeredSurvey in Model)
+@if (Model.Count == 0)
 {
-    <div>
-        <p>User ID: @answeredSurvey.UserId</p>
-        <p>Survey ID: @answeredSurvey.SurveyId</p>
-        <p>User Answers:</p>
-        <ul>
-            @foreach (var answer in answeredSurvey.UserAnswers)
+    <p>No answered surveys found.</p>
+}
+else
+{
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            @foreach (var (answeredSurvey, survey) in Model)
             {
-                <li>@answer</li>
+                <div class="col-md-4">
+                    <div class="card" style="border-radius: 10px;">
+                        <div class="card-body p-md-5">
+                            <h3 class="card-title">@survey.Title</h3>
+                            <h6 class="card-text">Description: @survey.Description</h6>
+                            <h6 class="card-text">Answered by: @answeredSurvey.UserId</h6>
+                            <hr class="my-3">
+                            @for (var i = 0; i < survey.Questions.Count; i++)
+                            {
+                                <div class="row my-2">
+                                    <div class="col-sm-6"><strong>@survey.Questions[i]</strong></div>
+                                    <div class="col-sm-6">@answeredSurvey.UserAnswers[i]</div>
+                                </div>
+                                <hr class="my-2">
+                            }
+                        </div>
+                    </div>
+                </div>
             }
-        </ul>
+        </div>
     </div>
 }
