--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -6,7 +6,13 @@
     <h1 class="display-4">Welcome Mr. Admin</h1>
     <p>Placeholder for something?</p>
 </div>
-
+<div class="left-header">
+    <br /><br />
+    <br /><br />
+    <a class="nav-link" asp-area="" asp-controller="Admin" asp-action="Index" style="color: black">Dashboard</a>
+    <a class="nav-link" asp-area="" asp-controller="Admin" asp-action="NewSurvey" style="color: black">New survey</a>
+    <a class="nav-link" asp-area="" asp-controller="Admin" asp-action="AnsweredSurveys" style="color: black">Answered surveys</a>
+</div>
 
 <div class="container mt-5">
     <div class="col-md-4">
